--- a/StudyPRO/.env
+++ b/StudyPRO/.env
@@ -1,22 +1,6 @@
-DB_HOST=your_mysql_server_ip
+DB_HOST=localhost
 DB_PORT=3306
-DB_USER=your_mysql_username
-DB_PASSWORD=your_mysql_password
-DB_DATABASE=your_mysql_database_name
+DB_USER=root
+DB_PASSWORD=password
+DB_DATABASE=questionbank
 
-require('dotenv').config(); // 引入 dotenv 模块并加载环境变量
-
-const mysql = require('mysql');
-
-const connection = mysql.createConnection({
-  host: process.env.DB_HOST,
-  port: process.env.DB_PORT,
-  user: process.env.DB_USER,
-  password: process.env.DB_PASSWORD,
-  database: process.env.DB_DATABASE,
-});
-
-connection.connect((err) => {
-  if (err) throw err;
-  console.log("Connected to MySQL database!");
-});
